# clang-pokedex

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
src/application/: pokedex.service.c  pokedex.service.h  pokedex.service.test.c
src/domain/: pokedex.repository.h  pokemon.c  pokemon.h
src/domain/pokedex/: pokedex.c  pokedex.h  pokedex.test.c
src/domain/pokemon/: pokemon.c  pokemon.h  pokemon.test.c
src/exposition/: cli.c  cli.h
src/exposition/adapter/: cli.pokemon.adapter.c  cli.pokemon.adapter.h  cli.pokemon.adapter.test.c
src/infrastructure/: pokedex.in_memory.repository.c
src/infrastructure/string/: string.utils.h  string.utils.test.c
src/kernel/date/: date.c  date.h  date.test.c
src/kernel/string/: string.utils.c  string.utils.h  string.utils.test.c
src/kernel/string/split/: split.c  split.h  split.test.c
test/: e2e.c  test.c  test.h
